[package]
name = "fanotify-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.50"
concurrent-queue = "2.5.0"
fanotify-rs = {git = "https://github.com/Percivalll/fanotify-rs"}
memchr = "2.7.6"
nix = {version = "0.30.1", features = ["poll", "env"]}
num_cpus = "1.17.0"
threadpool = "1.8.1"


[profile.dev]
panic = "abort"


[profile.release]
panic = "abort"